# mcp-sqlite

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_sqlite/: audit.py  config.py  server.py  sql_validation.py
src/mcp_sqlite/tools/: __init__.py  sqlite.py
src/tests/: test_audit.py  test_config.py  test_sql_validation.py  test_tools.py
