[project]
name = "mcp-sqlite"
version = "0.1.0"
description = "MCP tool server — read-only SQLite access for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "uvicorn>=0.42.0",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
]

[project.scripts]
mcp-sqlite = "mcp_sqlite.server:main"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sqlite"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "I"]
